# WLS

./: CMakeLists.txt  main.cpp
data/: data.csv  y.csv
utils/: WLS.h  readCSV.h
